--- a/templates/index.html
+++ b/templates/index.html
@@ -275,10 +275,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=2 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/1b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=2 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/1b.png' %}" alt="">
                                                             </a>
                                                             
@@ -287,7 +287,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=2 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -302,10 +302,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=2 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/2b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=2 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/2b.png' %}" alt="">
                                                             </a>
                                                             
@@ -314,7 +314,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=2 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -328,10 +328,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=3 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/3b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=3 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/3b.png' %}" alt="">
                                                             </a>
                                                             
@@ -340,7 +340,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=3 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -354,10 +354,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=3 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/4b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=3 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/4b.png' %}" alt="">
                                                             </a>
                                                             
@@ -366,7 +366,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=3 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -381,10 +381,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=8 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/5b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=8 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/5b.png' %}" alt="">
                                                             </a>
                                                             
@@ -393,7 +393,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=8 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -407,10 +407,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=9 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/6b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=9 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/6b.png' %}" alt="">
                                                             </a>
                                                             
@@ -419,7 +419,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=7 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -433,10 +433,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=7 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/7b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=7 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/7b.png' %}" alt="">
                                                             </a>
                                                         </div>
@@ -444,7 +444,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=7 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -459,10 +459,10 @@
 													<div class="badge bg-danger text-white position-absolute ft-regular ab-right text-upper">-40%</div>
                                                     <div class="card-body p-0">
                                                         <div class="shop_thumb position-relative">
-                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-hide" href="{% url 'product:product_with_category' category_id=8 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/8b.png' %}" alt="">
                                                             </a>
-                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="#">
+                                                            <a class="card-img-top d-block overflow-hidden ovr-show" href="{% url 'product:product_with_category' category_id=8 %}">
                                                                 <img class="card-img-top" src="{% static 'assets/img/newImages/Products_V5/8b.png' %}" alt="">
                                                             </a>
                                                             
@@ -471,7 +471,7 @@
                                                     <div class="card-footer b-0 p-3 pb-0 bg-white d-flex align-items-start justify-content-center">
                                                         <div class="text-left">
                                                             <div class="text-center">
-                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product' %}">Beautiful Design Dress</a></h5>
+                                                                <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="{% url 'product:product_with_category' category_id=8 %}">Beautiful Design Dress</a></h5>
                                                             </div>
                                                         </div>
                                                     </div>
